--- a/imports/ui/css/Characters.css
+++ b/imports/ui/css/Characters.css
@@ -2,50 +2,63 @@
     display: grid;
     grid-template-columns: 200px 200px 200px;
     grid-template-rows: 200px 200px 200px;
-
+    margin-top: 10vh;
 }
-.bar {
 
+.bar {
     width: 100%;
     position: fixed;
     top: 0;
     font-family: 'Indie Flower', cursive;
+    background-color: #1f1f14;
+    color: white;
+    text-align: center;
 }
-.item img{
+
+.item img {
     border: solid white;
- }
+}
+
 .item1 {
     grid-column-start: 1;
     grid-column-end: 3;
 }
-.item1 img, .item4 img{
+
+.item1 img, .item4 img {
     max-width: 400px;
 }
+
 .item2 {
     grid-column-start: 3;
     grid-column-end: 4;
 }
-.item2 img, .item5 img{
+
+.item2 img, .item5 img {
     max-width: 200px;
     max-height: 200px;
 }
+
 .item3 {
     grid-row-start: 2;
     grid-row-end: 4;
 }
-.item3 img{
+
+.item3 img {
     max-height: 400px;
     overflow-y: hidden;
 }
+
 .item4 {
     grid-column-start: 2;
     grid-column-end: 4;
 }
+
 .item5 {
     grid-column-start: 2;
     grid-column-end: 3;
 }
+
 /*.item1 {*/
-    /*grid-column-start: 1;*/
-    /*grid-column-end: 4;*/
+/*grid-column-start: 1;*/
+/*grid-column-end: 4;*/
 /*}*/
