comics of characters ready

--- a/imports/ui/css/Drawer.css
+++ b/imports/ui/css/Drawer.css
@@ -55,6 +55,11 @@ body {
 .imageDes {
   text-align: center;
 }
-.descriptionColor {
+.descriptionColor, .comicColor {
   color: #FCF03F;
+}
+.comicsName {
+
+  color: white;
+  font-family: 'Roboto', sans-serif;
 }
