--- a/imports/ui/Game/css/MenuStyle.css
+++ b/imports/ui/Game/css/MenuStyle.css
@@ -1,1 +1,42 @@
+#MenuScreen
+{
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 1fr 3fr 3fr 1fr;
+  grid-template-rows: 1fr 3fr 2fr 2fr;
+  grid-template-areas: ". . . ."
+  ". PlayButton PlayButton ."
+  ". TeamButton HowTo .";
+}
 
+.MenuButton.ActiveButton
+{
+  border-radius: 10px;
+  font-size: 3em;
+  cursor: pointer;
+  transform: skewX(-15deg);
+}
+
+.MenuButton.InactiveButton
+{
+  border-radius: 10px;
+  font-size: 3em;
+  transform: skewX(-15deg);
+}
+
+.PlayButton
+{
+  grid-area: PlayButton;
+}
+
+.DeckButton
+{
+  grid-area: TeamButton;
+}
+
+.tutorialButton
+{
+  grid-area: HowTo;
+}
